--- a/README
+++ b/README
@@ -1,30 +1,29 @@
-# Ping pong
+# {Ping-pong}
 
-#### this is a game designed using javascript css and html
+#### this is a game designed using javascript css and html, 2017
 
-## This is a project where a user inputs a number and then receives a range of numbers within a given chain while considering the following exceptions;
+#### By Sharon Kirui
+
+## Description
+
+This is a project where a user inputs a number and then receives a range of numbers within a given chain while considering the following exceptions;
+
 1. Numbers divisible by 3 are replaced with "ping"
 2. Numbers divisible by 5 are replaced with "pong"
 3. Numbers divisible by 15 are replaced with "pingpong"
 
-  ##Specifications
+
+## Technologies Used
+
+html
+css
+javascript
+
+## Support and contact details
+
+if you find any problems using the game feel free to reach out to me through my email chepkokirui@gmail.column-rule-color
+
+### License
 
 
-
-
-
-
-
-
-
-##  Technologies used
-
-  html
-  CSS
-  Java script and jquery
-
-  ##support and contact details
-
-  If you have any questions ,comments or issues feel free to reach out to me through my email chepkokirui@gmail.com
-
-copyright (c) 2017 **sharonkirui
+Copyright (c) 2017 sharon kirui
